--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+terraform/plan.out
+
+# Ignore Terraform lock file
+terraform/.terraform.lock.hcl
+
+# Ignore temporary vim files
+.*.swp
+# Ignore vim backup files
+*~
