ansible.cfg: specify inventory's path.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -141,7 +141,7 @@ nocows=True
 ;hash_behaviour=replace
 
 # (pathlist) Comma separated list of Ansible inventory sources
-;inventory=/etc/ansible/hosts
+inventory=~/.ansible/inventory.ini
 
 # (pathspec) Colon separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=~/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
