ansible: add a log file for easy debug

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -174,7 +174,7 @@ inventory=~/.ansible/inventory.ini
 ;log_filter=
 
 # (path) File to which Ansible will log on the controller. When empty logging is disabled.
-;log_path=
+log_path=/tmp/ansible.log
 
 # (pathspec) Colon separated paths in which Ansible will search for Lookup Plugins.
 ;lookup_plugins=~/.ansible/plugins/lookup:/usr/share/ansible/plugins/lookup
