ansible: move cache_dir and token_path out of the repo

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -550,7 +550,7 @@ become=True
 # (path) The directory that stores cached responses from a Galaxy server.
 # This is only used by the ``ansible-galaxy collection install`` and ``download`` commands.
 # Cache files inside this dir will be ignored if they are world writable.
-;cache_dir=~/.ansible/galaxy_cache
+cache_dir=~/.ansible/galaxy_cache
 
 # (bool) Some steps in ``ansible-galaxy`` display a progress wheel which can cause issues on certain displays or when outputing the stdout to a file.
 # This config option controls whether the display wheel is shown or not.
@@ -577,7 +577,7 @@ become=True
 ;server_list=
 
 # (path) Local path to galaxy access token file
-;token_path=~/.ansible/galaxy_token
+token_path=~/.ansible/galaxy_token
 
 
 [inventory]
