--- a/ansible/roles/dvwa/tasks/main.yml
+++ b/ansible/roles/dvwa/tasks/main.yml
@@ -53,8 +53,14 @@
     - "{{ www_log_dir }}/access.log"
     - "{{ www_log_dir }}/error.log"
 
-- name: Apply SELinux file context
+- name: SELinux - Apply file context
   ansible.builtin.command: restorecon -irv "{{ www_base }}"
+
+- name: SELinux - Allow Nginx/PHP to connect to a database
+  ansible.posix.seboolean:
+    name: httpd_can_network_connect_db
+    state: yes
+    persistent: yes
 
 - name: Synchronize HTML content to Document Root
   ansible.posix.synchronize:
@@ -70,6 +76,8 @@
   vars:
     nginx_manage_repo: false
     nginx_install_from: os_repository
+    nginx_enable: true
+    nginx_start: true
 - name: Create Custom Nginx configurations
   import_role:
     name: nginxinc.nginx_core.nginx_config
@@ -101,11 +109,28 @@
                    root: "{{ docroot }}"
                  custom_directives:
                    - fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                   - fastcgi_pass unix:/var/run/fpm-dvwa.sock;
+                   - fastcgi_pass unix:/var/run/php-fpm/fpm-dvwa.sock;
                    - fastcgi_index index.php;
                    - include fastcgi_params;
                    - fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
+- name: install Python deps
+  package: name="python3-PyMySQL"
+
 - name: install PHP from Jeff Geerling
   import_role:
-    name: geerlingguy.php
+    #name: geerlingguy.php
+    name: geerlingguy.php-mysql
+    name: geerlingguy.mysql
+
+- name: update php.ini with allow_url_include
+  ansible.builtin.lineinfile:
+    path: /etc/php.ini
+    line: 'allow_url_include = On'
+    regexp: 'allow_url_include.*'
+
+- name: Restart service php-fpm, in all cases
+  ansible.builtin.service:
+    name: php-fpm
+    state: restarted
+
