refactoring: try to create 2 roles out of 1.
Ideally, I'll have:
- 1 LEMP role that installs just the bare minimum
- 1 DVWA just for installing users, config and
  the DVWA application

--- a/ansible/roles/dvwa.yml
+++ b/ansible/roles/dvwa.yml
@@ -1,5 +1,5 @@
 ---
-- name: Installs and configure a LEMP server with DVWA
+- name: Installs and configure DVWA on a LEMP server
   hosts: isp3vps2.example.com
 
   roles:
