--- a/ansible/roles/dvwa/tasks/main.yml
+++ b/ansible/roles/dvwa/tasks/main.yml
@@ -8,62 +8,6 @@
     clone: yes
     update: yes
 
-- name: Handle Document Root part 1
-  stat:
-    path: "{{ docroot }}"
-  register: document_root_type
-
-- name: Handle Document Root part 2
-  ansible.builtin.file:
-    path: "{{ docroot }}"
-    state: absent
-  when: document_root_type.stat.lnk is defined 
-
-- name: Handle Document Root part 3
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    mode: 0755
-    owner: root
-    group: root
-    follow: no
-    force: yes
-  loop:
-    - "{{ docroot }}"
-    - "{{ www_log_dir }}"
-    - "{{ www_tmp_dir }}"
-
-- name: Allow Nginx to read files in www_base
-  community.general.sefcontext:
-    target: "{{ item }}"
-    setype: httpd_sys_content_t
-    state: present
-  loop:
-    - '{{ www_base }}'
-    - '{{ docroot }}'
-    - '{{ www_tmp_dir }}'
-
-- name: Allow Nginx to write log files in www_log_dir
-  community.general.sefcontext:
-    target: "{{ item }}"
-    setype: httpd_log_t
-    state: present
-  loop:
-    - "{{ www_log_dir }}"
-    - "{{ www_log_dir }}/access.log"
-    - "{{ www_log_dir }}/error.log"
-
-- name: SELinux - Apply file context
-  ansible.builtin.command: restorecon -irv "{{ www_base }}"
-  register: modified_context
-  changed_when: modified_context.stdout != ""
-
-- name: SELinux - Allow Nginx/PHP to connect to a database
-  ansible.posix.seboolean:
-    name: httpd_can_network_connect_db
-    state: yes
-    persistent: yes
-
 - name: Synchronize HTML content to Document Root
   ansible.posix.synchronize:
     src: "{{ local_content_repo }}/"
@@ -72,14 +16,6 @@
     recursive: yes
   delegate_to: "{{ inventory_hostname }}"
 
-- name: install Nginx from OS repos
-  import_role:
-    name: nginxinc.nginx_core.nginx
-  vars:
-    nginx_manage_repo: false
-    nginx_install_from: os_repository
-    nginx_enable: true
-    nginx_start: true
 - name: Create Custom Nginx configurations
   import_role:
     name: nginxinc.nginx_core.nginx_config
@@ -116,18 +52,15 @@
                    - include fastcgi_params;
                    - fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
-- name: install Python deps
-  package: name="python3-PyMySQL"
-
 - name: install PHP from Jeff Geerling
   import_role:
-    #name: geerlingguy.php
+    name: geerlingguy.php
     name: geerlingguy.php-mysql
     name: geerlingguy.mysql
 
-- name: update php.ini with allow_url_include
-  ansible.builtin.lineinfile:
-    path: /etc/php.ini
-    line: 'allow_url_include = On'
-    regexp: 'allow_url_include.*'
-  notify: restart php-fpm
+    #- name: update php.ini with allow_url_include
+    #  ansible.builtin.lineinfile:
+    #    path: /etc/php.ini
+    #    line: 'allow_url_include = On'
+    #    regexp: 'allow_url_include.*'
+    #  notify: restart php-fpm
